--- a/examples/python/create_slices_covers80.ipynb
+++ b/examples/python/create_slices_covers80.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "e36d2e76",
+   "execution_count": 4,
+   "id": "82cf6c03",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,32 +14,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "ed1ae130",
+   "execution_count": 6,
+   "id": "57f6f1d2",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "PermissionError",
-     "evalue": "[Errno 13] Permission denied: '/Users/dirceusilva/Documentos/BaseDados/covers32k/list1.list'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mPermissionError\u001b[0m                           Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-3-1a4017c147ec>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"/Users/dirceusilva/Documentos/BaseDados/covers32k/list1.list\"\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m     \u001b[0mcontents\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcontents\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mPermissionError\u001b[0m: [Errno 13] Permission denied: '/Users/dirceusilva/Documentos/BaseDados/covers32k/list1.list'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "with open(\"/Users/dirceusilva/Documentos/BaseDados/covers32k/list1.list\") as f:\n",
-    "    contents = f.read()\n",
-    "    print(contents)"
+    "# Covers 80\n",
+    "# http://labrosa.ee.columbia.edu/projects/coversongs/covers80/\n",
+    "\n",
+    "list1_files = \"/Users/dirceusilva/Documentos/BaseDados/covers32k/list1.list\"\n",
+    "list2_files = \"/Users/dirceusilva/Documentos/BaseDados/covers32k/list2.list\"\n",
+    "\n",
+    "with open(list1_files) as f:\n",
+    "    list1 = f.read()\n",
+    "    #print(list1)\n",
+    "\n",
+    "with open(list2_files) as f:\n",
+    "    list2 = f.read()\n",
+    "    #print(list2)\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bf44c073",
+   "id": "81a271c9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "diraudios = \"/Users/dirceusilva/Documentos/BaseDados/covers32k\"\n",
+    "dirout = \"/Users/dirceusilva/Documentos/BaseDados/covers32k_slices\"\n",
+    "slice_time = 6.0 # 6 seconds"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "873aeef5",
    "metadata": {},
    "outputs": [],
    "source": []
